# testpress-interview

./: pyproject.toml  requirements.txt
Quiz/: views.py
Quiz/Templates/: quiz.html  result.html
Quizzes/: settings.py
Templates/: index.html  quiz.html
