[project]
name = "testpress-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.4",
    "django-crispy-forms>=2.4",
    "gunicorn>=23.0.0",
    "requests>=2.32.4",
    "whitenoise>=6.9.0",
]
